Correct 'align-item' to 'align-items' in bouquets.css
Fix typo in CSS property 'align-item' to 'align-items'.

--- a/bouquets.css
+++ b/bouquets.css
@@ -54,6 +54,7 @@ header {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    align-item: center;
     padding: 120px 30px 0 30px;
   }
 }
@@ -63,6 +64,7 @@ header {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    align-item: center;
     padding: 120px 30px 0 60px;
   }
   .sec1 .image img {
